--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h5>Welcome to <span id="fp">Fascinating Places</span></h5>
         </section>
         <div id="intro">
-          <p>Explore and see many interesting locations.</p>
+          <p>Explore and see interesting locations.</p>
         </div>
       </article>
       <div class="picbanner1">
